--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ advent_of_code_2024 = { path = ".", editable = true }
 python = "3.13.*"
 pip = ">=24.3.1,<25"
 ipython = ">=8.30.0,<9"
+matplotlib = ">=3.10.0,<4"
 
 [tool.ruff]
 line-length = 119
